# FIAP---Tech-Challenge-Fase-3---ML

./: .gitignore  README.md  docker-compose.yml  report_penultimo_e_atual.csv
1_data_ingestion/: dockerfile  pyproject.toml
1_data_ingestion/src/: main.py
1_data_ingestion/src/infra/: metatrader.py  postegress.py  redis.py
2_model_training/: lstm_metadata.json  main_xpto.py  pyproject.toml
2_model_training/model_lstm_pytorch/: RandomForestRegressor.py  XGBRegressor.py  multimodel.py
2_model_training/model_lstm_pytorch/infra/: metatrader.py  mongo.py
2_model_training/model_lstm_pytorch/model/: lstm.py  lstm_torch.py
2_model_training/model_lstm_pytorch/utils/: feature_engineering.py  graficos.py
configs/grafana_config/: dashboards.yaml  datasources.yaml
