[project]
name = "fiap-tech-challenge-fase-3-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "darts>=0.38.0",
    "matplotlib>=3.10.6",
    "metatrader5>=5.0.5260",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    "1_get_data_module",
]
